# daqss

./: README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  schemaspy.properties
database_setup/: create_database.sql  create_tables.sql  populate_levels_of_data_granularity.sql
demo_data/: fake_customer_data.csv  product_information.sqlite
demo_data/product_information_sources/: amazon_ca_source.txt  amazon_in_source.txt  amazon_us_source.txt
docs/: demo.md  demo1.ipynb  demo2.ipynb  demo3.ipynb  index.md  set-up.md
docs/database_docs/: daqss.public.xml  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  routines.html
docs/database_docs/tables/: aggregation_constraint.html  aggregation_function.html  aggregation_process_is_based_on.html  dq_dimension.html  dq_metric.html  dq_result.html
docs/technical/: api.md  dependencies.md  environment_variables.md  ev_code_reference.md  postgresql_structure.md
includes/: abbreviations.md
site/: 404.html  index.html  objects.inv
site/database_docs/: anomalies.html  columns.html  constraints.html  orphans.html  relationships.html
site/database_docs/tables/: aggregation_process.html  aggregation_process_computes_va_b73ff08c.html  data_element.html  levels_of_data_granularity.html  metric_computes_value_for_dimension.html
site/demo/: index.html
site/demo1/: index.html
site/demo2/: index.html
site/demo3/: index.html
site/search/: search_index.json
site/set-up/: index.html
src/daqss/: __init__.py  api.py  environment_variables.py  levels_of_data_granularity.py
(+29 files in other folders)
